Chapter 8. Chunking array is improved. Test main cleaned up