@@ -12,7 +12,6 @@ public class Solution {
         for(int i = 0; i < array.length; i++){
             currentList.add(array[i]);
             if(currentList.size() == chunkSize) {
-                System.out.println("Current list: " + currentList);
                 resultList.add(new ArrayList<>(currentList));
                 currentList.clear();
             }
@@ -26,11 +25,11 @@ public class Solution {
 
         // Test cases with expected results
         Object[][] testCases = {
-                {new Integer[]{1, 2, 3, 4, 5}, 2, Arrays.asList(Arrays.asList(1, 2), Arrays.asList(3, 4), Arrays.asList(5))},
+                {new Integer[]{1, 2, 3, 4, 5}, 2, Arrays.asList(Arrays.asList(1, 2), Arrays.asList(3, 4), List.of(5))},
                 {new Integer[]{1, 2, 3, 4, 5, 6, 7, 8}, 3, Arrays.asList(Arrays.asList(1, 2, 3), Arrays.asList(4, 5, 6), Arrays.asList(7, 8))},
-                {new Integer[]{1, 2, 3}, 1, Arrays.asList(Arrays.asList(1), Arrays.asList(2), Arrays.asList(3))},
-                {new Integer[]{1, 2, 3, 4, 5}, 5, Arrays.asList(Arrays.asList(1, 2, 3, 4, 5))},
-                {new Integer[]{1}, 1, Arrays.asList(Arrays.asList(1))}
+                {new Integer[]{1, 2, 3}, 1, Arrays.asList(List.of(1), List.of(2), List.of(3))},
+                {new Integer[]{1, 2, 3, 4, 5}, 5, List.of(Arrays.asList(1, 2, 3, 4, 5))},
+                {new Integer[]{1}, 1, List.of(List.of(1))}
         };
 
         // Testing the chunkArray function
